test/expected/declare_hc.out
declare x as short char
        ^
9: error: "short char" is illegal for built-in type
